--- a/spec.html
+++ b/spec.html
@@ -129,19 +129,19 @@ contributors: Zibi Braniecki, Daniel Ehrenberg
         1. <ins>Set _dateTimeFormat_.[[DateStyle]] to _dateStyle_.</ins>
         1. <ins>Let _timeStyle_ be ? GetOption(_options_, `"timeStyle"`, `"string"`, &laquo; `"full"`, `"long"`, `"medium"`, `"short"` &raquo;, *undefined*).</ins>
         1. <ins>Set _dateTimeFormat_.[[TimeStyle]] to _timeStyle_.</ins>
-        1. <ins>If _dateStyle_ is not *undefined* or _timeStyle_ is not *undefined*, then</ins>
+        1. <ins>If _dateStyle_ is *undefined* and _timeStyle_ is *undefined*, then</ins>
+          1. Let _formats_ be _dataLocaleData_.[[formats]].
+          1. If _matcher_ is `"basic"`, then
+            1. Let _bestFormat_ be BasicFormatMatcher(_opt_, _formats_).
+          1. Else,
+            1. Let _bestFormat_ be BestFitFormatMatcher(_opt_, _formats_).
+        1. <ins>Else,</ins>
           1. <ins>For each row in <emu-xref href="#table-datetimeformat-components"></emu-xref>, except the header row, do</ins>
             1. <ins>Let _prop_ be the name given in the Property column of the row.</ins>
             1. <ins>Let _p_ be _opt_.[[&lt;_prop_&gt;]].</ins>
             1. <ins>If _p_ is not *undefined*, then</ins>
               1. <ins>Throw a *TypeError* exception.</ins>
           1. <ins>Let _bestFormat_ be DateTimeStyleFormat(_dateStyle_, _timeStyle_, _dataLocaleData_).</ins>
-        1. <ins>Else,</ins>
-          1. Let _formats_ be _dataLocaleData_.[[formats]].
-          1. If _matcher_ is `"basic"`, then
-            1. Let _bestFormat_ be BasicFormatMatcher(_opt_, _formats_).
-          1. Else,
-            1. Let _bestFormat_ be BestFitFormatMatcher(_opt_, _formats_).
         1. For each row in <emu-xref href="#table-datetimeformat-components"></emu-xref>, except the header row, do
           1. Let _prop_ be the name given in the Property column of the row.
           1. Let _p_ be _bestFormat_.[[&lt;_prop_&gt;]].
